fix sizing of food on small screens, remove use of I in copy and make logo work better in other non-white background contexts

--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ iframe {
   .foodSection {
     border-right: dashed white 1px;
     padding: 0 20px;
-    width: 200px;
+    width: 170px;
   }
 
   #orbox {
